--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     expose:
       - "5432"
   web:
-    build: ./django
+    build: .
     container_name: weird_web
     restart: unless-stopped
     volumes:
