--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,11 @@ jobs:
             echo 'export ENVIRONMENT="PROD"' >> $BASH_ENV # Redirect MY_ENV_VAR into $BASH_ENV
 
       - run:
+          name: "upgrade pip"
+          command: |
+            python3 -m pip install --upgrade pip
+
+      - run:
           name: "Install pytest"
           command: |
             python3 -m pip install pytest
